Canary-Deployment-Stratergy/canary-deployment.yml
# Canary-Deployment-stratergy
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-deployment
spec:
  replicas: 1  # Number of instances of the canary version
  selector:
    matchLabels:
      app: canary
  template:
    metadata:
      labels:
        app: canary
    spec:
      containers:
        - name: nginx
          image: nginx:latest  # Replace this with your canary version image
          ports:
            - containerPort: 80

# Canary-Deployment-stratergy service 
apiVersion: v1
kind: Service
metadata:
  name: canary-loadbalancer
spec:
  selector:
    app: canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
